Allow long urls to always wrap (word-wrap: break-word).  Fixes https://app.asana.com/0/15264711598672/87595774912936

--- a/assembl/static/css/components/_text.scss
+++ b/assembl/static/css/components/_text.scss
@@ -88,6 +88,7 @@ a {
   color: $theme_activelink_color;
   text-decoration: none;
   cursor: pointer;
+  word-wrap: break-word;
 
   &:hover, &:focus {
     text-decoration: underline;
